intTests/test_saw_submodule_import/testGoodImport3.log.good
Loading file "testGoodImport3.saw"
Error: Cryptol: [error] at testGoodImport3.saw:18:27--18:33
    Type not in scope: D2TySy
Stack trace:
   (builtin) in (callback)
   (builtin) in fails
   testGoodImport3.saw:18:1-18:39 (at top level)

(Failure was expected, continuing)
done
